# customer_support_agent

./: .env.example  .gitignore  env.example  langgraph.json  memory_records.md  memory_records_2.md  pyproject.toml
scripts/: aws_console_login.py  format_memory_records.py  memory_records.sh  setup_cognito.py  test_mcp_gateway.py
src/agent/: configuration.py  customer_conversation.py  customer_information.py  graph.py  issue_assessment.py  middleware.py  prompts.py  response_generation.py  state.py  utils.py
src/services/: agentcore_memory.py  bedrock.py  database.py  jira.py  mcp_client.py
src/tests/: test_configuration.py  test_graph.py  test_jira.py
src/tools/: __init__.py  database.py  jira.py
src/ui/: .gitignore  README.md  app.py  auth.py
src/ui/components/: __init__.py  agent_display.py
tests/: __init__.py  test_bedrock.py  test_database.py  test_graph.py
