[project]
name = "customer-support-agent"
version = "0.1.0"
description = "Customer support automation agent using LangGraph and Amazon Bedrock"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-aws>=1.0.0",
    "langgraph-cli[inmem]>=0.4.4",
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "jira>=3.10.0",
    "pandas>=2.2.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent", "services", "tools"]

[tool.setuptools.package-dir]
"agent" = "src/agent"
"services" = "src/services"
"tools" = "src/tools"

